--- a/versions.properties
+++ b/versions.properties
@@ -51,3 +51,23 @@ version.google.accompanist=0.23.1
 ##             # available=0.24.7-SNAPSHOT
 ##             # available=0.24.7-alpha
 ##             # available=0.24.8-SNAPSHOT
+
+version.kotlin=1.6.10
+
+version.org.jacoco..org.jacoco.ant=0.8.3
+
+version.org.jetbrains.compose.animation..animation=1.1.1
+
+version.org.jetbrains.compose.compiler..compiler=1.1.1
+
+version.org.jetbrains.compose.foundation..foundation=1.1.1
+
+version.org.jetbrains.compose.material..material=1.1.1
+
+version.org.jetbrains.compose.material3..material3=1.1.1
+
+version.org.jetbrains.compose.ui..ui=1.1.1
+
+version.org.jetbrains.compose.ui..ui-test-junit4=1.1.1
+
+version.org.jetbrains.dokka..dokka-base=1.6.10
